* Feature: Enable Look up driver in tfs tfvc item folder * Optimization: TestRunManager Comments * Optimization: download web driver single file * Optimization: update Dependency to actual version in POM * Bug Fix: in all Rest Connectors do not reset to host path after call with params in map * Remove Spring Framework Dependency